@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+       - Fix ::Row::NumifyGet breaking when using select/as or columns
 
 2.007002  2012-01-09 16:23:08 CST6CDT
        - Fix POD in AutoRemoveColumns (mattp)
